change encoding to utf-8

--- a/README
+++ b/README
@@ -1,11 +1,12 @@
 # proto_shell
-Pequeno projeto para a implementaÁ„o de um protÛtipo de shell.
-Esta implementaÁ„o foi desenvolvida como atividade complementar
-da disciplina de SO III do curso de Processamento de Dados da
+Pequeno projeto para a implementa√ß√£o de um prot√≥tipo de shell.
+
+Esta implementa√ß√£o foi desenvolvida como atividade complementar
+d disciplina de SO III do curso de Processamento de Dados da
 FATEC-SP.
 
-## InstalaÁ„o
-O processo de instalaÁ„o est· descrito no arquivo INSTALL na raiz do
+## Instala√ß√£o
+O processo de instala√ß√£o est√° descrito no arquivo INSTALL na raiz do
 projeto.
 
 ## Autor
