--- a/README
+++ b/README
@@ -13,4 +13,4 @@ projeto.
     Bruno Coimbra <bbcoimbra@gmail.com>
 
 ## Licensa
-Observar no arquivo LICENCE na raiz do projeto.
+Observar no arquivo LICENSE na raiz do projeto.
